// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OE - Description List horizontal renders correctly 1`] = `
<jest>
  <dl
    class="d-md-grid grid-3-9"
  >
    <dt
      class="d-flex"
    >
      <svg
        class="me-2 mt-1 bi icon--xs"
      >
        <use
          xlink:href="/icons.svg#geo-alt-fill"
        />
      </svg>
      <p
        class="mb-0 d-inline-block"
      >
        Only title label with icon
      </p>
    </dt>
    <dd>
      Description text goes here.
    </dd>
    <div>
      <dt>
        <p
          class="mb-0"
        >
          First title label
        </p>
      </dt>
      <dt
        class="d-flex"
      >
        <svg
          class="me-2 mt-1 bi icon--xs"
        >
          <use
            xlink:href="/icons.svg#geo-alt-fill"
          />
        </svg>
        <p
          class="mb-0 d-inline-block"
        >
          Second title label
        </p>
      </dt>
    </div>
    <dd>
      <p
        class="mb-0"
      >
        Description text goes here.
      </p>
    </dd>
    <dt>
      
          Only title label
    </dt>
    <div>
      <dd>
        <p
          class="mb-2"
        >
          Description text goes here.
        </p>
      </dd>
      <dd>
        <p
          class="mb-2"
        >
          Description text goes here.
        </p>
      </dd>
    </div>
  </dl>
</jest>
`;

exports[`OE - Description List renders correctly 1`] = `
<jest>
  <dl>
    <dt>
      <svg
        class="me-2 bi icon--xs"
      >
        <use
          xlink:href="/icons.svg#geo-alt-fill"
        />
      </svg>
      <p
        class="d-inline-block mb-0"
      >
        Only title label with icon
      </p>
    </dt>
    <dd>
      <p
        class="mb-2"
      >
        Description text goes here.
      </p>
    </dd>
    <dt>
      First title label
    </dt>
    <dt>
      <svg
        class="me-2 bi icon--xs"
      >
        <use
          xlink:href="/icons.svg#geo-alt-fill"
        />
      </svg>
      <p
        class="mb-0 d-inline-block"
      >
        Second title label
      </p>
    </dt>
    <dd>
      <p
        class="mb-2"
      >
        Description text goes here.
      </p>
    </dd>
    <dt>
      
          Only title label
    </dt>
    <dd>
      <p
        class="mb-2"
      >
        Description text goes here.
      </p>
    </dd>
    <dd>
      <p
        class="mb-2"
      >
        Description text goes here.
      </p>
    </dd>
  </dl>
</jest>
`;

exports[`OE - Description List with title horizontal renders correctly 1`] = `
<jest>
  <h6
    class="fw-bold mb-4"
  >
    Description list test title
  </h6>
  <dl
    class="d-md-grid grid-3-9"
  >
    <dt
      class="d-flex"
    >
      <svg
        class="me-2 mt-1 bi icon--xs"
      >
        <use
          xlink:href="/icons.svg#geo-alt-fill"
        />
      </svg>
      <p
        class="mb-0 d-inline-block"
      >
        Only title label with icon
      </p>
    </dt>
    <dd>
      Description text goes here.
    </dd>
    <div>
      <dt>
        <p
          class="mb-0"
        >
          First title label
        </p>
      </dt>
      <dt
        class="d-flex"
      >
        <svg
          class="me-2 mt-1 bi icon--xs"
        >
          <use
            xlink:href="/icons.svg#geo-alt-fill"
          />
        </svg>
        <p
          class="mb-0 d-inline-block"
        >
          Second title label
        </p>
      </dt>
    </div>
    <dd>
      <p
        class="mb-0"
      >
        Description text goes here.
      </p>
    </dd>
    <dt>
      
          Only title label
    </dt>
    <div>
      <dd>
        <p
          class="mb-2"
        >
          Description text goes here.
        </p>
      </dd>
      <dd>
        <p
          class="mb-2"
        >
          Description text goes here.
        </p>
      </dd>
    </div>
  </dl>
</jest>
`;

exports[`OE - Description List with title renders correctly 1`] = `
<jest>
  <h6
    class="fw-bold mb-4"
  >
    Description list test title
  </h6>
  <dl>
    <dt>
      <svg
        class="me-2 bi icon--xs"
      >
        <use
          xlink:href="/icons.svg#geo-alt-fill"
        />
      </svg>
      <p
        class="d-inline-block mb-0"
      >
        Only title label with icon
      </p>
    </dt>
    <dd>
      <p
        class="mb-2"
      >
        Description text goes here.
      </p>
    </dd>
    <dt>
      First title label
    </dt>
    <dt>
      <svg
        class="me-2 bi icon--xs"
      >
        <use
          xlink:href="/icons.svg#geo-alt-fill"
        />
      </svg>
      <p
        class="mb-0 d-inline-block"
      >
        Second title label
      </p>
    </dt>
    <dd>
      <p
        class="mb-2"
      >
        Description text goes here.
      </p>
    </dd>
    <dt>
      
          Only title label
    </dt>
    <dd>
      <p
        class="mb-2"
      >
        Description text goes here.
      </p>
    </dd>
    <dd>
      <p
        class="mb-2"
      >
        Description text goes here.
      </p>
    </dd>
  </dl>
</jest>
`;
